# argless

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml  single_include_header.yml
Example/: CMakeLists.txt
Example/src/: main.cpp
example/src/: main.cpp
include/: argless.hpp
include/argless/: argless.hpp  core.hpp  helper.hpp  parser.hpp  parsers.hpp  str.hpp
include/argless/parsers/: array.hpp  dynamic_array.hpp  enum.hpp  fundamental_type.hpp  optional.hpp  path.hpp  string.hpp  tuple.hpp  variant.hpp
module_src/: argless.core.cppm  argless.cppm
single_include/: argless.hpp
src/: Argless.hpp
src/Argless/: ArgType.hpp  Argless.hpp  ArglessData.hpp  Args.hpp  Core.hpp  Core_undef.hpp  Exception.hpp  Helper.hpp  Parser.hpp  Result.hpp  Rule.hpp  RuleBasicString.hpp  RuleVector.hpp  StringToType.hpp
src/Argless/Parser/: Array.hpp  DynamicArray.hpp  Enum.hpp  FundamentalType.hpp  Optional.hpp  Parser.hpp  Path.hpp  RuleString.hpp  String.hpp  Tuple.hpp  Variant.hpp
tools/: generate_header.py
